# handlers/user/handler.go
@@ -2,6 +2,7 @@ package user_handler
 
 import (
 	"github.com/ddan1l/tega-backend/ctx"
+	project_dto "github.com/ddan1l/tega-backend/dto/project"
 	user_dto "github.com/ddan1l/tega-backend/dto/user"
 	errs "github.com/ddan1l/tega-backend/errors"
 	project_usecase "github.com/ddan1l/tega-backend/usecases/project"
@@ -48,4 +49,35 @@ func (h *userHandler) User(c *gin.Context) {
 	}
 
 	res.SuccessWithData(c, r)
+}
+
+// Logout godoc
+// @Summary User app
+// @Description User app
+// @Tags user
+// @Accept json
+// @Produce json
+// @Success 200 {object} res.SuccessWithDataResponse{data=res.UserAppResponse}
+// @Response 403 {object} res.ErrorResponse{error=errs.ForbiddenError}
+// @Router /user/app [get]
+func (h *userHandler) UserApp(c *gin.Context) {
+	if projectUser, err := ctx.GetProjectUserFromContext(c); err != nil {
+		res.Error(c, errs.Forbidden.WithMessage(err.Error()))
+		return
+	} else {
+		userProjects, err := h.projectUsecase.GetUserProjects(&project_dto.FindByUserIdDto{UserID: projectUser.UserID})
+
+		if err != nil {
+			res.Error(c, errs.Forbidden.WithMessage(err.Error()))
+			return
+		}
+
+		r := &res.UserAppResponse{
+			ProjectUser: *projectUser,
+			Projects:    userProjects.Projects,
+		}
+
+		res.SuccessWithData(c, r)
+	}
+
 }
